--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/styled": "^11.8.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@types/react": "17.0.40",
     "typescript": "4.6.2"
   }
