--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.8.1",
+    "@types/react-redux": "^7.1.23",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
