--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@emotion/styled": "^11.8.1",
     "@types/react-redux": "^7.1.23",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
