--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.8.1",
+    "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.23",
+    "@types/redux-actions": "^2.6.2",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1"
