--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.23",
     "@types/redux-actions": "^2.6.2",
+    "@types/socket.io-client": "^3.0.0",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
@@ -21,7 +22,8 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
