--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.23",
     "@types/redux-actions": "^2.6.2",
     "@types/socket.io-client": "^3.0.0",
+    "axios": "^0.27.2",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
